iOS fix for properly updating the document state

--- a/iOS/Info.plist
+++ b/iOS/Info.plist
@@ -98,7 +98,7 @@
 			<key>UTTypeDescription</key>
 			<string>Example Text</string>
 			<key>UTTypeIdentifier</key>
-			<string>com.example.plain-text</string>
+			<string>com.ShaderMania.shader</string>
 			<key>UTTypeTagSpecification</key>
 			<dict>
 				<key>public.filename-extension</key>
